--- a/frontend/src/components/layouts/sideMenu/index.css
+++ b/frontend/src/components/layouts/sideMenu/index.css
@@ -1,25 +1,12 @@
 .sidebar {
   position: fixed;
   top: 58.5px;
-  left: 0;
   width: 250px;
-  height: 100%;
+  height: 100vh;
+  padding: 20px;
   background-color: #ffffff;
-  transition: transform 0.3s ease;
-  z-index: 9999;
-  transform: translateX(-100%);
-  transform: translateX(0);
 }
 
 .content {
   padding: 20px;
-}
-
-
-.image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
 }
